# context-scraper-mcp-server

./: .server.py.swp  GIT_PUSH_GUIDE.md  LOG  README.md  SERVER_MANAGEMENT_GUIDE.md  USAGE_GUIDE.md  V3_SMART_UPGRADE_GUIDE.md  V4_TEST_GUIDE.md  V5_IMPLEMENTATION_PLAN.md  V5_IMPLEMENTATION_SUMMARY.md  V5_NEXT_STEPS.md  V5_USAGE_GUIDE.md  V6_TO_V9_UPDATE_SUMMARY.md  anti_detection.py  config.json  pyproject.toml  server_v4_simple.py  server_v5_core.py  server_v7.py  server_v8.py  server_v9.py  system_manager.py  test_v5.py
.amazonq/rules/: crawl4ai_quickstart.md
config/: claude_config_example.json
config/v6_config/: claude_config.json  system_config.json
docs/: ENHANCED_FEATURES_GUIDE.md  MCP_PROJECT_MANAGEMENT_SUMMARY.md  PROJECT_OVERVIEW.md  SYSTEM_MANAGEMENT_GUIDE.md  V3_TEST_REPORT.md
docs/architecture/: DEPENDENCY_ANALYSIS.md  DEPENDENCY_GRAPH.md  SEARCH_ENGINE_ANALYSIS.md  V6_DEPENDENCY_ANALYSIS.md
docs/development/: SEARCH_ENGINE_FIX_SUMMARY.md  V6_FIXES_SUMMARY.md  V6_UPGRADE_COMPLETE.md  V6_UPGRADE_PLAN.md
docs/versions/: README.md  V4_IMPLEMENTATION_NOTES.md  V4_QUICK_TEST.md  V4_USAGE_GUIDE.md
legacy/: README.md
legacy/configs/: search_engines.json  user_preferences.json
legacy/development/: setup_claude.py  test_v6_fixes.py  verify_claude_config.py
legacy/documentation/: ANTI_DETECTION_FEATURES.md  CODE_REVIEW_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  (+2 more)
v6_core/: intent_analyzer.py
v9_config/: crawl_config.json
v9_core/: config_manager.py  crawl_config_manager.py  intent_analyzer.py
(+15 files in other folders)
