[project]
name = "context-scraper-mcp-server"
version = "0.2.0"
description = "A powerful MCP server for web crawling and content extraction using Crawl4AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "crawl4ai>=0.6.3",
    "mcp[cli]>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
